[package]
name = "fruity"
version = "2.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {default-features = false, version = "0", features = ["builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend"]}
tokio = {version = "1", features = ["full"]}
leptess = "0"
screenshots = "0"
image = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
display-info = "0.3.2"